@@ -249,7 +249,7 @@ void notify::run(void)
     shell::log(DEBUG1, "notify watching %s", dirpath);
 
     watcher = inotify_init();
-    dirnode = inotify_add_watch(watcher, dirpath, IN_CLOSE_WRITE|IN_MOVED_TO|IN_MOVED_FROM|IN_DELETE);
+    dirnode = inotify_add_watch(watcher, dirpath, IN_CLOSE_WRITE|IN_MOVED_TO|IN_MOVED_FROM|IN_DELETE|IN_DONT_FOLLOW);
 
     while(watcher != -1) {
         // we want 500 ms of inactivity before actual updating...
@@ -304,6 +304,11 @@ void notify::run(void)
                 if(ext && case_eq(ext, ".xml")) {
                     shell::log(DEBUG2, "%s updated", event->name);
                     ++updates;
+                }
+                else if(eq(event->name, "reload")) {
+                    shell::log(DEBUG2, "reload requested");
+                    control::send("reload");
+                    updates = 0;
                 }
                 offset += sizeof(struct inotify_event) + event->len;
             }
